--- a/app/src/main/res/layout/activity_episodio.xml
+++ b/app/src/main/res/layout/activity_episodio.xml
@@ -7,7 +7,7 @@
     tools:context=".EpisodioActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/serieRecycler"
+        android:id="@+id/EpisodioRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/adicionarSerieFab"
+        android:id="@+id/adicionarEpisodioFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
