--- a/app/src/main/res/layout/activity_cadastro_episodio.xml
+++ b/app/src/main/res/layout/activity_cadastro_episodio.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cadastro"
+    android:id="@+id/cadastroEpisodio"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CadastroEpisodioActivity"
@@ -21,6 +21,18 @@
             android:text="Cadastre os Dados do Episódio"
             android:textSize="20dp"
             android:layout_gravity="center_horizontal"/>
+
+        <EditText
+            android:id="@+id/nomeSerieEpEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint = "Nome da Série"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            />
+
 
         <EditText
             android:id="@+id/numSquencialEpEt"
@@ -57,8 +69,9 @@
 
 
 
+
         <Button
-            android:id="@+id/salvarTemporadaBt"
+            android:id="@+id/salvarEpisodioBt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Salvar"
