--- a/app/src/main/res/layout/activity_serie.xml
+++ b/app/src/main/res/layout/activity_serie.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Series Manager"
+            android:layout_gravity="center_horizontal"
             android:textSize="50dp" />
 
     <Button
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_gravity="center_horizontal"
         android:padding="5dp"
         android:text="Assistir"
         ></Button>
